--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,102 @@
+amazon-braket-default-simulator==1.26.0
+amazon-braket-schemas==1.22.0
+amazon-braket-sdk==1.83.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.2
 asttokens==2.4.1
+backoff==2.2.1
+backports.entry-points-selectable==1.3.0
+boltons==24.0.0
+boto3==1.34.144
+botocore==1.34.144
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+cloudpickle==2.2.1
 comm==0.2.2
+contourpy==1.2.1
+cryptography==42.0.8
 cuquantum-cu12==24.3.0.post1
 custatevec-cu12==1.6.0.post1
 cutensor-cu12==2.0.1
 cutensornet-cu12==2.4.0.post1
+cycler==0.12.1
 debugpy==1.8.2
 decorator==5.1.1
 dill==0.3.8
 exceptiongroup==1.2.1
 executing==2.0.1
+fonttools==4.53.0
 h5py==3.11.0
+ibm-cloud-sdk-core==3.20.2
+ibm-platform-services==0.54.2
+idna==3.7
+importlib_metadata==8.0.0
 ipykernel==6.29.5
 ipython==8.26.0
 jedi==0.19.1
+jmespath==1.0.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+matplotlib==3.9.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
 nvidia-cublas-cu12==12.5.3.2
 nvidia-cuda-runtime-cu12==12.5.82
 nvidia-cusolver-cu12==11.6.3.83
 nvidia-cusparse-cu12==12.5.1.3
 nvidia-nvjitlink-cu12==12.5.82
+openpulse==0.5.0
+openqasm3==1.0.0
+opt-einsum==3.3.0
+oqpy==0.3.6
 packaging==24.1
+pandas==2.2.2
 parso==0.8.4
 pbr==6.0.0
 pexpect==4.9.0
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.8.0
+pylatexenc==2.10
+pyparsing==3.1.2
 pyscf==2.6.0
+pyspnego==0.11.0
 python-dateutil==2.9.0.post0
+pytz==2024.1
 pyzmq==26.0.3
 qiskit==1.1.0
 qiskit-aer==0.14.2
 qiskit-aer-gpu==0.14.2
 qiskit-algorithms==0.3.0
+qiskit-braket-provider==0.4.0
+qiskit-ibm-runtime==0.25.0
+qiskit-ionq==0.5.0
 qiskit-nature @ git+https://github.com/qiskit-community/qiskit-nature.git@3221b5c56cc25bd83f95b5c9932f801e79f249ee
+requests==2.32.3
+requests_ntlm==1.3.0
+retry==0.9.2
+rich==13.7.1
 rustworkx==0.14.2
+s3transfer==0.10.2
 scipy==1.13.1
+seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
 stevedore==5.2.0
@@ -53,4 +106,8 @@ tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
 wcwidth==0.2.13
+websocket-client==1.8.0
+zipp==3.19.2
